<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="theo.dexter.ui.fragment.ModeFragment"
    android:orientation="vertical"
    android:paddingLeft="@dimen/default_margin"
    android:paddingRight="@dimen/default_margin">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/default_margin_2x">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_mode_primary_button_text"
            android:id="@+id/mode_primary_button"
            android:layout_marginRight="@dimen/default_margin" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_mode_primary_description"
            android:textAppearance="@style/TextAppearance.RobotCar.Subtitle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/default_margin_2x">

        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_mode_secondary_button_text"
                android:id="@+id/mode_secondary_button"
            android:layout_marginRight="@dimen/default_margin" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_mode_secondary_description"
            android:textAppearance="@style/TextAppearance.RobotCar.Subtitle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/default_margin_2x">

        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_mode_play_button_text"
                android:id="@+id/mode_play_button"
            android:layout_marginRight="@dimen/default_margin" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_mode_play_description"
            android:textAppearance="@style/TextAppearance.RobotCar.Subtitle" />
    </LinearLayout>

</LinearLayout>
